clusters/hetzner/apps/media/threadfin/app/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &name threadfin
  namespace: media
  labels:
    app.kubernetes.io/name: *name
    sidecar.istio.io/inject: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  serviceName: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
    spec:
      hostname: *name
      containers:
        - name: *name
          image: fyb3roptik/threadfin:latest
          resources:
            requests:
              memory: "250Mi"
            limits:
              memory: "500Mi"
          ports:
            - containerPort: 34400
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: config
        labels:
          app.kubernetes.io/name: *name
      spec:
        resources:
          requests:
            storage: 10Gi
        accessModes:
          - ReadWriteOnce
