clusters/hetzner/apps/media/threadfin/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name threadfin
  namespace: media
  labels:
    app.kubernetes.io/name: *name
spec:
  selector:
    app.kubernetes.io/name: *name
  ports:
    - targetPort: http
      port: 34400
